--- a/DIR/.htaccess
+++ b/DIR/.htaccess
@@ -1,5 +1,5 @@
 DirectoryIndex login.php
 
-ErrorDocument 404 /AMS_PUPQC/404.html
+ErrorDocument 404 /AMSPUPQC/404.html
 
-ErrorDocument 500 /AMS_PUPQC/500.html
+ErrorDocument 500 /AMSPUPQC/500.html
